# atlas-hec-v2.1

./: .gitignore  AKASHIC_FAILURE_ARCHETYPES_V1.md  AKASHIC_POLICY_CANDIDATES_V1.md  AKASHIC_V3_STATUS.md  ARCHITECTURAL_PIVOT.md  ATLAS_HEC_FINAL_REPORT.md  ATLAS_HEC_P6_DIRECTIVE.md  ATLAS_PROTOCOL_EVOLUTION.md  BIOWORLD_CODE_SEARCH_REPORT.md  BIOWORLD_RESEARCH_ARCHITECTURE.md  BIOWORLD_V18_DISCOVERY_SUMMARY.md  BIOWORLD_V19_INTEGRATION_MAP.md  BIOWORLD_V19_INTEGRATION_STATUS.md  BIOWORLD_V19_MEMORY_INTEGRATION_SPEC.md  BIOWORLD_V19_RUST_CORE_FOUND.md  BIOWORLD_V19_UNIFIED_FRAMEWORK.md  BIO_WORLD_V18_SYSTEM_ARCHITECTURE.md  CAMPAIGNS_ACCELERATED_STATUS.md  CAMPAIGNS_APPROVAL_REQUEST.md  CAMPAIGNS_DAY0_CHECKLIST.md  CAMPAIGNS_DECISION.md  CAMPAIGNS_LAUNCH_SIGNAL.md  CAMPAIGNS_OVERVIEW.md  CANDIDATE_001_STATUS.md  CANDIDATE_GENERATION_PLAN_V1.md  CANDIDATE_INVENTORY_128SEED_PLAN.md  CAUSAL_MEMORY_INTEGRATION_PLAN.md  CLAIMS_REGISTRY.md  CODEX_IMPLEMENTATION_BRIEF_THREE_LAYER_MEMORY.md  DAILY_BRIEF_TEMPLATE_V2.md  DIGITAL_ORGANISM_ARCHITECTURE.md  DIGITAL_ORGANISM_CORE_AXIOMS_v1.md  DOCUMENT_INVENTORY_REPORT.md  EMERGENT_MEMORY_ECOLOGY_ROADMAP.md  EVIDENCE_INNOVATION_CURVE_ANALYSIS.md  EVIDENCE_K_BOUNDARY_ANALYSIS.md  EVOLUTION_DYNAMICS_MODEL_v1.md  EVOLUTION_SEARCH_CONVERGENCE_REPORT.md  EXECUTION_MODE_PARALLEL.md  EXECUTION_PLAN_IMMEDIATE.md  (+174 more)
code-diffusion/: .gitignore  Cargo.toml  P0_STATUS.md  README.md  ROUND18_PILOT_REPORT.md  ROUND19_SCOPE.md  ROUND20_SCOPE.md  ROUND21_TASK_ALIGNMENT.md  ROUND_16_OBJECTIVE.md  STATUS.md  TRAINING_INTEGRATION_STATUS.md  p0_4_report.json  p0_4_report_v2.json
code-diffusion/experiments/: realunet_gradient_pilot.py
code-diffusion/src/: lib.rs  main.rs
code-diffusion/tests/: p0_4_rerun_report.json  realunet_gradient_pilot_report.json  round18_checkpoint.json  round19_report.json  round20_report.json  round21_report.json  round21b_falsification_report.json  test_loss_trend.rs  test_reload_determinism.rs  test_single_step_update.rs
self_organizing_substrate/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
self_organizing_substrate/src/: cluster_dynamics.rs  global_workspace.rs  lib.rs  micro_unit.rs  plasticity.rs  substrate_open_world_bridge.rs
socs_universe_search/: ACTIVE_TRIGGER_CAMPAIGN_P0.md  CWCI.md  Cargo.toml  DECISION_READY.md  DEPLOYMENT_POLICY.md  EXECUTION_DISCIPLINE.md  IMPLEMENTATION_COMPLETE.md  MAINLINE_STATUS.md  OQS_GATE15_MINIMAL_FIX.md  P0_OPERATIONAL_ENVELOPE.md  P0_OPERATIONAL_ENVELOPE_UPDATED.md  P0_R2_EXECUTION_REPORT.md  P1_GATE15_EXECUTION_REPORT.md  R2_SCALE_VALIDATION_PLAN.md  README.md  STATUS.md  UNIVERSE_SEARCH_V0_COMPLETE.md
socs_universe_search/candidate_intake/: intake_pipeline.py
socs_universe_search/deployment_configs/: alert_rules.md  failover_procedure.md  operational_runbook.md  tier1_deployment_config.yaml  tier2_monitoring_config.yaml
socs_universe_search/experiments/: HYPOTHESIS_O1.md  HYPOTHESIS_OQS.md  MAINLINE_CONVERGENCE_REPORT.md  run_hypothesis_o1_gate1.py  run_hypothesis_o1_gate2.py  run_oqs_gate1.py
socs_universe_search/failure_triage/: OQS_Gate1_diagnosis.md
socs_universe_search/hypothesis_tree/: status_tracker.json  status_tracker_v2.json
socs_universe_search/multiverse_engine/: akashic_memory_v2.py  multiverse_runner.py
socs_universe_search/multiverse_lanes/: P2_5_surprise_search.md  P2_5_surprise_search_v2.md  P3_wave_substrate.md
socs_universe_search/outputs/: akashic_memory_v2.json  cwci_report.json  degradation_audit_report.json  dual_track_validation_report.md  hall_of_fame.jsonl  intake_results.json  multiverse_report.json  oqs_r2_validation.json  r4_validation_report.json  r5_validation_report.json  r6_validation_report.json  tier1_deployment_report.json  tier1_deployment_telemetry.json  tier2_canary_telemetry.json  u0_worm_like_11_summary.json  u10_octopus_like_23_summary.json  u11_octopus_like_37_summary.json  u12_pulse_central_11_summary.json  u13_pulse_central_23_summary.json  u14_pulse_central_37_summary.json  u15_pulse_central_11_summary.json  u16_pulse_central_23_summary.json  u17_pulse_central_37_summary.json  u18_modular_lattice_11_summary.json  u19_modular_lattice_23_summary.json  u1_worm_like_23_summary.json  u20_modular_lattice_37_summary.json  u21_random_sparse_11_summary.json  u22_random_sparse_23_summary.json  u23_random_sparse_37_summary.json  u2_worm_like_37_summary.json  u3_worm_like_11_summary.json  u4_worm_like_23_summary.json  u5_worm_like_37_summary.json  u6_octopus_like_11_summary.json  u7_octopus_like_23_summary.json  u8_octopus_like_37_summary.json  u9_octopus_like_11_summary.json
socs_universe_search/proposed_edits/: L4_001_add_simulation_flag.md
socs_universe_search/research_ops/: LAYER_ARCHITECTURE.md  auto_experiment_runner.py
socs_universe_search/src/: akashic_records.rs  architecture_families.rs  config_generator.rs  consciousness_index.rs  cwci_report.rs  evaluation.rs  evolution_engine.rs  experiment_plan.rs  graveyard.rs  hall_of_fame.rs  lib.rs  parameter_space.rs  search_scheduler.rs  stress_profile.rs  telemetry.rs  universe.rs  universe_config.rs  universe_runner.rs  validation_gates.rs
socs_universe_search/tier2_canary/: 00_oncall_assignment.md  canary_report.json
socs_universe_search/tier2_monitoring_infra/: 01_per_seed_cwci_tracking.yaml  02_alert_pipeline.yaml  03_auto_failover.yaml  04_telemetry_retention.yaml  05_failover_drill.sh  failover_drill_output.txt  readiness_report.json
socs_universe_search/weekly_ops/: DAILY_BRIEF_20260313.md  DAILY_BRIEF_TEMPLATE.md  P0_WEEKLY_OPERATIONS_REVIEW_2026W11.md  README.md  WEEKLY_OPS_TEMPLATE.md
source/: Cargo.toml  INTEGRATION_MAP.md  INTEGRATION_STATUS.md  MAINLINE_ADOPTION_COMPLETE.md  Makefile.phase2  PHASE2_STAGE2_EXECUTION.md  PHASE2_STAGE2_PLAN.md  PHASE2_STATUS.md  README_SOURCE.md  V19_L2L3_ATTRIBUTION_FINAL.md  V19_MEMORY_FINAL_v1.5.md  V19_MEMORY_STATUS_v1.md  VALIDATION_ROADMAP.md  run_phase2_independent.sh  run_phase2_parallel.sh
source/hetero_bridge/: Makefile  atlas_kernels.ptx  bridge_host.cpp  hec_bridge.cpp  hec_bridge_v2.cpp  kernels.cu  test_v2  (+3 more)
(+1960 files in other folders)
