[package]
name = "code-diffusion"
version = "0.1.0"
edition = "2021"
authors = ["Hyperbrain Research"]
description = "Code-DNA Diffusion: Generative modeling for code patches"

[dependencies]
# Core math/ML
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Deep learning (using candle for Rust-native, or tch for PyTorch bindings)
# Option 1: candle (pure Rust, no Python dependency)
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

# Option 2: tch (PyTorch bindings, better performance)
tch = { version = "0.14", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

[features]
default = ["candle-backend"]
candle-backend = ["candle-core", "candle-nn"]
tch-backend = ["tch"]

[[bin]]
name = "code-diffusion"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"

[profile.release]
opt-level = 3
lto = true
