[package]
name = "code-diffusion"
version = "0.1.0"
edition = "2021"
authors = ["Hyperbrain Research"]
description = "Code-DNA Diffusion: Generative modeling for code patches"

[dependencies]
# Core math/ML
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Deep learning - temporarily disabled due to dependency conflicts
# candle-core = { version = "0.3", optional = true }
# candle-nn = { version = "0.3", optional = true }
# tch = { version = "0.14", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Time
chrono = "0.4"

[features]
default = []
# candle-backend = ["candle-core", "candle-nn"]
# tch-backend = ["tch"]

[[bin]]
name = "code-diffusion"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"

[[bin]]
name = "p0_4_verify"
path = "src/bin/p0_4_verify.rs"

[[bin]]
name = "round16_gradient_verify"
path = "src/bin/round16_gradient_verify.rs"

[[bin]]
name = "round18_gradient_pilot"
path = "src/bin/round18_gradient_pilot.rs"

[[bin]]
name = "round19_backprop_minimal"
path = "src/bin/round19_backprop_minimal.rs"

[[bin]]
name = "round20_full_integration"
path = "src/bin/round20_full_integration.rs"

[[bin]]
name = "p0_4_rerun"
path = "src/bin/p0_4_rerun.rs"

[[bin]]
name = "round21_conditional_pilot"
path = "src/bin/round21_conditional_pilot.rs"

[[bin]]
name = "round21b_falsification_run"
path = "src/bin/round21b_falsification_run.rs"

[profile.release]
opt-level = 3
lto = true
