[package]
name = "socs_universe_search"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]
description = "SOCS Universe Search Engine - Architecture exploration at scale"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[[bin]]
name = "explore_universes"
path = "src/bin/explore_universes.rs"

[[bin]]
name = "run_first8_batch"
path = "src/bin/run_first8_batch.rs"

[[bin]]
name = "cwci_report"
path = "src/bin/cwci_report.rs"

[lib]
name = "socs_universe_search"
path = "src/lib.rs"
