[package]
name = "markers_001"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"

[[bin]]
name = "markers_001"
path = "src/main.rs"

[[bin]]
name = "d4_runner"
path = "src/bin/d4_runner.rs"

[[bin]]
name = "d1_runner"
path = "src/bin/d1_runner.rs"

[[bin]]
name = "a1_a5_runner"
path = "src/bin/a1_a5_runner.rs"
